--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -280,14 +280,14 @@
     <br>
     Reiniciar: Enter
   </div>
-  <div id="version">Versão 1.4</div>
+  <div id="version"> </div>
 
   <script>
     document.addEventListener('contextmenu', e => { e.preventDefault(); alert('Clique com o botão direito desativado.'); });
     document.addEventListener('keydown', e => {
       if (e.key === 'F12' || e.keyCode === 123) {
         e.preventDefault();
-        alert('Ferramentas de desenvolvedor desativadas.');
+        alert('Erro ao abrir o console.');
       }
     });
 
@@ -304,10 +304,10 @@
     const immuneButton = document.getElementById('immuneButton');
 
     let gameStarted = false, scoreSaved = false;
-    const boundary = { x: 70, y: 70, width: 900 - 140, height: 900 - 140 };
+    const boundary = { x: 70, y: 70, height: 900 - 140, width: 900 - 140};
     const player = {
-      x: 900/2,
-      y: 900/2,
+      x: 900 / 2,
+      y: 900 / 2,
       radius: 20,
       speed: 4,
       immune: false,
@@ -405,7 +405,7 @@
       const gameOverRankingList = gameOverScreen.querySelector('#rankingList');
       startRankingList.innerHTML = '';
       gameOverRankingList.innerHTML = '';
-      rankings.sort((a,b)=>b.score-a.score).slice(0,10).forEach(e => {
+      rankings.sort((a, b) => b.score - a.score).slice(0, 10).forEach(e => {
         const li1 = document.createElement('li');
         li1.textContent = `${e.name} - ${e.score}`;
         startRankingList.appendChild(li1);
@@ -480,16 +480,16 @@
     }
 
     function createBar() {
-      const dir = Math.floor(Math.random()*4);
+      const dir = Math.floor(Math.random() * 4);
       const thickness = 30;
-      const length = Math.random()*400 + 200;
-      const speed = 2 + Math.random()*1.8;
+      const length = Math.random() * 400 + 200;
+      const speed = 2 + Math.random() * 1.8;
       let bar;
-      switch(dir) {
-        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
-        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
-        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
-        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed }; break;
+      switch (dir) {
+        case 0: bar = { x: -thickness, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: speed, dy: 0 }; break;
+        case 1: bar = { x: canvas.width, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: -speed, dy: 0 }; break;
+        case 2: bar = { x: Math.random() * (canvas.width - length), y: -thickness, width: length, height: thickness, dx: 0, dy: speed }; break;
+        case 3: bar = { x: Math.random() * (canvas.width - length), y: canvas.height, width: length, height: thickness, dx: 0, dy: -speed }; break;
       }
       bars.push(bar);
     }
@@ -523,8 +523,12 @@
     function checkCollisions() {
       if (player.immune) return;
       for (const b of bars) {
-        if (player.x + player.radius > b.x && player.x - player.radius < b.x + b.width &&
-            player.y + player.radius > b.y && player.y - player.radius < b.y + b.height) {
+        if (
+          player.x + player.radius > b.x &&
+          player.x - player.radius < b.x + b.width &&
+          player.y + player.radius > b.y &&
+          player.y - player.radius < b.y + b.height
+        ) {
           gameOver = true;
           break;
         }
@@ -550,7 +554,7 @@
       ctx.fillStyle = player.skin;
       ctx.shadowColor = player.skin;
       ctx.shadowBlur = 20;
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
+      ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
       ctx.fill();
       ctx.shadowBlur = 0;
 
@@ -609,7 +613,7 @@
     let lastFrameTime = 0;
     let lastBarTime = 0;
 
-    function gameLoop(timestamp=0) {
+    function gameLoop(timestamp = 0) {
       if (!gameStarted || gameOver) {
         if (gameOver) {
           finalScoreText.textContent = `Sua pontuação: ${Number(score.toFixed(2))}`;
@@ -643,7 +647,7 @@
       drawScore();
       drawImmunityBar();
 
-      score += dt * 0.16667;
+      score += dt * 0.016667; // 1 ponto por segundo
       score = Number(score.toFixed(2));
 
       requestAnimationFrame(gameLoop);
