--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Lazer Runner</title>
+  <title>LazerRunner</title>
   <style>
     body {
       display: flex;
@@ -326,7 +326,7 @@
       ' ': false, Enter: false
     };
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
-    let animationFrameId = null; // Track animation frame for cancellation
+    let animationFrameId = null;
 
     let joystickActive = false;
     let joystickCenter = { x: 0, y: 0 };
@@ -423,7 +423,7 @@
           player.immune = true;
         }
         if (e.key === 'Enter' && gameOver) {
-          console.log('Enter pressed, triggering resetGame'); // Debug log
+          console.log('Enter pressed, triggering resetGame'); // Debug
           resetGame();
         }
       }
@@ -439,14 +439,14 @@
     });
 
     playButton.addEventListener('click', () => {
-      console.log('Play button clicked, starting game'); // Debug log
+      console.log('Play button clicked, starting game'); // Debug
       startScreen.classList.add('hidden');
       gameStarted = true;
       resetGame();
     });
 
     restartButton.addEventListener('click', () => {
-      console.log('Restart button clicked, triggering resetGame'); // Debug log
+      console.log('Restart button clicked, triggering resetGame'); // Debug
       gameOverScreen.classList.add('hidden');
       resetGame();
     });
@@ -468,17 +468,17 @@
     });
 
     function resetGame() {
-      // Cancel any existing animation frame
       if (animationFrameId) {
         cancelAnimationFrame(animationFrameId);
-        console.log('Cancelled animation frame:', animationFrameId); // Debug log
+        animationFrameId = null;
+        console.log('Cancelled animation frame'); // Debug
       }
 
       player.x = canvas.width / 2;
       player.y = canvas.height / 2;
       player.immune = false;
       player.energy = 100;
-      score = 0; // Explicitly reset score
+      score = 0;
       bars = [];
       gameOver = false;
       gameStarted = true;
@@ -490,7 +490,7 @@
       gameOverScreen.classList.add('hidden');
       updateSkinSelectors();
       updateRanking();
-      console.log('Game reset, score:', score, 'gameStarted:', gameStarted, 'gameOver:', gameOver); // Debug log
+      console.log('Game reset, score:', score, 'gameStarted:', gameStarted, 'gameOver:', gameOver); // Debug
       animationFrameId = requestAnimationFrame(gameLoop);
     }
 
@@ -541,7 +541,7 @@
         if (player.x + player.radius > b.x && player.x - player.radius < b.x + b.width &&
             player.y + player.radius > b.y && player.y - player.radius < b.y + b.height) {
           gameOver = true;
-          console.log('Collision detected, game over, score:', score); // Debug log
+          console.log('Collision detected, game over, score:', score); // Debug
           break;
         }
       }
@@ -601,7 +601,7 @@
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
       ctx.textAlign = 'center';
-      ctx.fillText('Pontuação: ' + score.toFixed(1), canvas.width / 2, 40); // Changed "Score" to "Pontuação"
+      ctx.fillText('Pontuação: ' + score.toFixed(1), canvas.width / 2, 40);
       ctx.textAlign = 'left';
     }
 
@@ -630,11 +630,11 @@
         if (gameOver) {
           finalScoreText.textContent = `Sua pontuação: ${score.toFixed(1)}`;
           gameOverScreen.classList.remove('hidden');
-          console.log('Game over screen shown, score:', score); // Debug log
+          console.log('Game over screen shown, score:', score); // Debug
         }
         return;
       }
-      const dt = (timestamp - lastFrameTime) / 16.666; // Normalize to 60 FPS
+      const dt = (timestamp - lastFrameTime) / 16.666;
       lastFrameTime = timestamp;
 
       clearScreen();
@@ -660,58 +660,63 @@
       drawScore();
       drawImmunityBar();
 
-      score += dt / 60; // 1 point per second
-      console.log('Score update, score:', dt, 'new score:', score); // Debug log
+      score += dt / 60;
+      console.log('Score:', score, 'dt:', dt); // Debug
 
       animationFrameId = requestAnimationFrame(gameLoop);
     }
 
     function updateSkinSelectors() {
-      const startScreenOptions = startScreen.querySelectorAll('.skinOption');
+      const startSkinOptions = startScreen.querySelectorAll('.skinOption');
       const gameOverSkinOptions = gameOverScreen.querySelectorAll('.skinOption');
 
       function selectSkin(skin, options) {
         options.forEach(opt => {
           opt.classList.remove('selected');
-          if (opt.dataset.skin === 'skin') {
+          if (opt.dataset.skin === skin) {
             opt.classList.add('selected');
           }
-        }
-        startSkinOptions.forEach(option => {
-          option.addEventListener('click', () => {
-            player.skin = option.dataset.skin;
-            selectSkin(player.skin, startSkinOptions);
-            selectSkin(player.skin, gameOverSkinOptions);
-          });
         });
-
-        gameOverSkinOptions.forEach(option => {
-          option.addEventListener('click', () => {
-            player.skin = option.dataset.skin;
-            selectSkin(player.skin, startSkinOptions);
-            selectSkin(player.skin, gameOverSkinOptions);
-          };
-        });
-
-        selectSkin(player.skin, startSkinOptions);
-        selectSkin(player.gameOverSkinOptions);
       }
 
-      function resizeCanvas() {
-        const maxWidth = window.innerWidth * 0.9;
-        const maxHeight = window.innerHeight * 0.8;
-        const size = Math.min(maxWidth, maxHeight, 900);
-        canvas.style.width = size + 'px';
-        canvas.style.height = size + 'px';
-      }
-
-      window.addEventListener('resize', resizeCanvas);
-      window.addEventListener('load', () => {
-        resizeCanvas();
-        updateRanking();
-        updateSkinSelectors();
-        setupJoystick();
+      startSkinOptions.forEach(option => {
+        option.addEventListener('click', () => {
+          player.skin = option.dataset.skin;
+          selectSkin(player.skin, startSkinOptions);
+          selectSkin(player.skin, gameOverSkinOptions);
+          console.log('Skin selected (start):', player.skin); // Debug
+        });
       });
-    </script>
-  </body>
+
+      gameOverSkinOptions.forEach(option => {
+        option.addEventListener('click', () => {
+          player.skin = option.dataset.skin;
+          selectSkin(player.skin, startSkinOptions);
+          selectSkin(player.skin, gameOverSkinOptions);
+          console.log('Skin selected (game over):', player.skin); // Debug
+        });
+      });
+
+      selectSkin(player.skin, startSkinOptions);
+      selectSkin(player.skin, gameOverSkinOptions);
+    }
+
+    function resizeCanvas() {
+      const maxWidth = window.innerWidth * 0.9;
+      const maxHeight = window.innerHeight * 0.8;
+      const size = Math.min(maxWidth, maxHeight, 900);
+      canvas.style.width = size + 'px';
+      canvas.style.height = size + 'px';
+    }
+
+    window.addEventListener('resize', resizeCanvas);
+    window.addEventListener('load', () => {
+      resizeCanvas();
+      updateRanking();
+      updateSkinSelectors();
+      setupJoystick();
+      console.log('Game loaded, initial score:', score); // Debug
+    });
+  </script>
+</body>
 </html>
