--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -326,6 +326,7 @@
       ' ': false, Enter: false
     };
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
+    let animationFrameId = null; // Added to track animation frames
 
     let joystickActive = false;
     let joystickCenter = { x: 0, y: 0 };
@@ -407,10 +408,10 @@
       gameOverRankingList.innerHTML = '';
       rankings.sort((a,b)=>b.score-a.score).slice(0,10).forEach(e => {
         const li1 = document.createElement('li');
-        li1.textContent = `${e.name} - ${e.score}`;
+        li1.textContent = `${e.name} - ${Number(e.score).toFixed(2)}`;
         startRankingList.appendChild(li1);
         const li2 = document.createElement('li');
-        li2.textContent = `${e.name} - ${e.score}`;
+        li2.textContent = `${e.name} - ${Number(e.score).toFixed(2)}`;
         gameOverRankingList.appendChild(li2);
       });
     }
@@ -421,7 +422,10 @@
         if (e.key === ' ' && !player.immune && player.energy >= 10) {
           player.immune = true;
         }
-        if (e.key === 'Enter' && gameOver) resetGame();
+        if (e.key === 'Enter' && gameOver) {
+          console.log('Enter pressed, triggering resetGame'); // Debug
+          resetGame();
+        }
       }
     });
 
@@ -435,12 +439,14 @@
     });
 
     playButton.addEventListener('click', () => {
+      console.log('Play button clicked, resetting score and starting game'); // Debug
       startScreen.classList.add('hidden');
       gameStarted = true;
       resetGame();
     });
 
     restartButton.addEventListener('click', () => {
+      console.log('Restart button clicked, triggering resetGame'); // Debug
       gameOverScreen.classList.add('hidden');
       resetGame();
     });
@@ -462,21 +468,30 @@
     });
 
     function resetGame() {
+      if (animationFrameId) {
+        cancelAnimationFrame(animationFrameId);
+        animationFrameId = null;
+        console.log('Cancelled animation frame'); // Debug
+      }
+
       player.x = canvas.width / 2;
       player.y = canvas.height / 2;
       player.immune = false;
       player.energy = 100;
-      score = 0;
+      score = 0; // Reset score
       bars = [];
       gameOver = false;
+      gameStarted = true;
       scoreSaved = false;
       saveRankingButton.disabled = false;
       saveRankingButton.textContent = 'Salvar no ranking';
-      lastFrameTime = lastBarTime = 0;
+      lastFrameTime = 0;
+      lastBarTime = 0;
       gameOverScreen.classList.add('hidden');
       updateSkinSelectors();
       updateRanking();
-      requestAnimationFrame(gameLoop);
+      console.log('Game reset, score:', score, 'gameStarted:', gameStarted, 'gameOver:', gameOver); // Debug
+      animationFrameId = requestAnimationFrame(gameLoop);
     }
 
     function createBar() {
@@ -486,12 +501,14 @@
       const speed = 2 + Math.random()*1.8;
       let bar;
       switch(dir) {
-        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
-        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
-        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
-        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed }; break;
+        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0, scored: false }; break;
+        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0, scored: false }; break;
+        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed, scored: false }; break;
+        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed, scored: false }; break;
       }
       bars.push(bar);
+      score += 1; // 1 point for bar creation
+      console.log('Bar created, score:', score); // Debug
     }
 
     function movePlayer(dt) {
@@ -521,12 +538,18 @@
     }
 
     function checkCollisions() {
-      if (player.immune) return;
       for (const b of bars) {
         if (player.x + player.radius > b.x && player.x - player.radius < b.x + b.width &&
             player.y + player.radius > b.y && player.y - player.radius < b.y + b.height) {
-          gameOver = true;
-          break;
+          if (player.immune && !b.scored) {
+            score += 1; // 1 point for passing through with immunity
+            b.scored = true; // Prevent double-counting
+            console.log('Immune collision, score:', score); // Debug
+          } else if (!player.immune) {
+            gameOver = true;
+            console.log('Collision detected, game over, score:', score); // Debug
+            break;
+          }
         }
       }
     }
@@ -585,7 +608,7 @@
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
       ctx.textAlign = 'center';
-      ctx.fillText('Score: ' + Number(score.toFixed(2)), canvas.width / 2, 40);
+      ctx.fillText('Score: ' + score, canvas.width / 2, 40); // Integer score
       ctx.textAlign = 'left';
     }
 
@@ -612,11 +635,18 @@
     function gameLoop(timestamp=0) {
       if (!gameStarted || gameOver) {
         if (gameOver) {
-          finalScoreText.textContent = `Sua pontuação: ${Number(score.toFixed(2))}`;
+          finalScoreText.textContent = `Sua pontuação: ${score.toFixed(2)}`;
           gameOverScreen.classList.remove('hidden');
+          console.log('Game over screen shown, score:', score); // Debug
+          if (animationFrameId) {
+            cancelAnimationFrame(animationFrameId);
+            animationFrameId = null;
+            console.log('Game over, animation frame cancelled'); // Debug
+          }
         }
         return;
       }
+
       const dt = (timestamp - lastFrameTime) / 16.666;
       lastFrameTime = timestamp;
 
@@ -643,10 +673,9 @@
       drawScore();
       drawImmunityBar();
 
-      score += dt * 0.16667;
-      score = Number(score.toFixed(2));
+      console.log('Score:', score); // Debug
 
-      requestAnimationFrame(gameLoop);
+      animationFrameId = requestAnimationFrame(gameLoop);
     }
 
     function updateSkinSelectors() {
@@ -667,6 +696,7 @@
           player.skin = option.dataset.skin;
           selectSkin(player.skin, startSkinOptions);
           selectSkin(player.skin, gameOverSkinOptions);
+          console.log('Skin selected (start):', player.skin); // Debug
         });
       });
 
@@ -675,6 +705,7 @@
           player.skin = option.dataset.skin;
           selectSkin(player.skin, startSkinOptions);
           selectSkin(player.skin, gameOverSkinOptions);
+          console.log('Skin selected (game over):', player.skin); // Debug
         });
       });
 
@@ -696,6 +727,7 @@
       updateRanking();
       updateSkinSelectors();
       setupJoystick();
+      console.log('Game loaded, initial score:', score); // Debug
     });
   </script>
 </body>
